<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.projects.yur.carscatalog.Activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/colorHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="136dp" />
    <TextView
        android:id="@+id/smallHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smallHeader"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorHeader"
        android:layout_below="@+id/loginHeader"/>
    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_edit"
        android:textColorLink="@android:color/white"
        android:layout_below="@+id/smallHeader"
        android:layout_marginTop="10dp" />
    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHighlight="@android:color/white"
        android:hint="@string/password"
        android:layout_below="@+id/usernameEdt"/>
    <LinearLayout
        android:id="@+id/rememberLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEdt">
        <CheckBox
            android:id="@+id/rememberBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"/>
        <TextView
            android:id="@+id/rememberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:clickable="true"/>
    </LinearLayout>
    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rememberLayout"
        android:clickable="true"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/forgot_pass"
        android:text="@string/login"
        android:textColor="@android:color/background_dark"
        android:background="@drawable/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="13dp"
        android:clickable="true" />


</RelativeLayout>
