<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.projects.yur.carscatalog.Activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_header"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp" />
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/placeholder3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_header"
        />
    <EditText
        android:id="@+id/full_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_below="@+id/avatar"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/user_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_edit"
        android:layout_below="@+id/full_name_edt"/>
    <EditText
        android:id="@+id/phone_number_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@+id/user_name_edt"/>
    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@+id/phone_number_edt"/>
    <EditText
        android:id="@+id/confirm_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/condfirm_email"
        android:layout_below="@+id/email_edt"/>
    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_below="@+id/confirm_email_edt"/>
    <EditText
        android:id="@+id/confirm_pass_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/password_edt"/>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/confirm_pass_edt"
        android:text="REGISTER"
        android:background="@drawable/regist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_btn"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agreement"
        android:weightSum="2">
        <TextView
            android:id="@+id/member"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/already_member" />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:text="LOGIN"
            android:textColor="@android:color/white"
            android:background="@drawable/login_button"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>